# skills

./: .flake8  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  generate.py  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.cursor-plugin/: marketplace.json  plugin.json
.github/workflows/: validate.yml
app-package/: SKILL.md
app-package/docs/: embedders.md  services-xml.md
data/: evals.json  evals_app-package.json  trigger_evals.csv
data/fixtures/diagnose-and-fix/: article.sd
data/fixtures/extend-existing-schema/: product.sd
data/fixtures/fix-broken-services-xml/: services.xml
evals/: README.md  aggregate.py  config.py  evals.json  grade.py  providers.py  run_evals.py  run_trigger_evals.py  trigger_evals.csv
feed-operations/: SKILL.md
feed-operations/docs/: document-json.md  feed-clients.md  partial-updates.md  rest-api.md  visiting-export.md
pyvespa/: SKILL.md
pyvespa/docs/: application-api.md  deployment-auth.md  package-api.md  query-builder-dsl.md
query-builder/: SKILL.md
query-builder/docs/: grouping.md  ml-models.md  query-tensors.md  rank-features.md  yql-operators.md
schema-authoring/: SKILL.md
schema-authoring/docs/: example-ecommerce-schema.md  field-types.md  gotchas-extended.md  schema-patterns.md  tensors-and-hnsw.md
skills/: app-package  feed-operations  pyvespa  query-builder  schema-authoring  vespa-cli
src/vespaskills/: __init__.py  cli.py  generate.py  logger.py
vespa-cli/: SKILL.md
vespa-cli/docs/: ci-cd.md  cli-reference.md  production-deploy.md  tests-utilities.md
(+8 files in other folders)
